--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ img {
 }
 
 .primary__button {
-  padding: 10px 32px;
+  padding: 10px 24px;
   min-width: 216px;
   border-color: transparent;
   border-radius: 4px;
@@ -115,6 +115,11 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .primary__button {
+    padding: 10px 32px;
+  }
 }
 
 .filter__button {
@@ -139,8 +144,6 @@ img {
 .form-footer__btn {
   margin: 0 auto;
   padding: 10px 28px;
-  width: 200px;
-  height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
