--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,5 +1,5 @@
 .primary__button {
-    padding: 10px 32px;
+    padding: 10px 24px;
     min-width: 216px;
     border-color: transparent;
     border-radius: 4px;
@@ -11,6 +11,9 @@
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    @media screen and (min-width: 1200px) {
+        padding: 10px 32px;
+    }
 }
 .filter__button {
     padding: 6px 22px;
@@ -28,15 +31,13 @@
     &:focus,
     &:active {
         color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+        background-color: var(--accent-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
 }
 .form-footer__btn {
     margin: 0 auto;
     padding: 10px 28px;
-    width: 200px;
-    height: 50px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
