--- a/css/main.css
+++ b/css/main.css
@@ -1142,8 +1142,11 @@ img {
   height: 100%;
   transition: box-shadow 250ms var(--timing-function);
 }
-.project__link:hover, .project__link:focus, .project__link:active {
+.project__link:hover, .project__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.project__link:hover .project__desc, .project__link:focus .project__desc {
+  transform: translateY(0%);
 }
 
 .project__about {
@@ -1164,9 +1167,6 @@ img {
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms var(--timing-function);
-}
-.project__link:hover .project__desc, .project__link:focus .project__desc, .project__link::active .project__desc {
-  transform: translateY(0%);
 }
 
 .project__content {
