--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -37,9 +37,11 @@
     height: 100%;
     transition: box-shadow 250ms var(--timing-function);
     &:hover,
-    &:focus,
-    &:active {
+    &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+        .project__desc {
+            transform: translateY(0%);
+        }
     }
 }
 .project__about {
@@ -59,11 +61,6 @@
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
     transition: transform 250ms var(--timing-function);
-    .project__link:hover &,
-    .project__link:focus &,
-    .project__link::active & {
-        transform: translateY(0%);
-    }
 }
 .project__content {
     flex-grow: 1;
